# Server_Audria

./: .gitignore  ADD_DATABASE_URL.md  COQUI_TTS_SETUP.md  DEPLOYMENT.md  Dockerfile  MIGRATION_INSTRUCTIONS.md  README.md  RENDER_PORT_FIX.md  RENDER_TTS_SETUP.md  SUPABASE_KEYS_GUIDE.md  TTS_RENDER_DEPLOYMENT.md  TTS_SETUP_GUIDE.md  VOICE_PROCESSOR_README.md  alembic.ini  create_test_data.py  docker-compose.yml  env.example  pyproject.toml  render.yaml  requirements.txt  run.py  start.sh  supabase_migration_persons.sql  test_connection.py  test_supabase_connection.sql  update_supabase_keys.sh
alembic/: env.py
alembic/versions/: 3c9ede05716f_add_file_conversation_message.py  81a53520953b_add_job_id_dependency_to_files.py  a1b2c3d4e5f6_add_billing_tables.py  be17e83e2941_added_category_table.py  e4f5g6h7i8j9_add_persons_tables.py
app/: main.py
app/core/: auth.py  billing_middleware.py  config.py  database.py  exceptions.py  job_timeout.py  message_queue.py  prompts.py  websocket_manager.py
app/crud/: __init__.py  base.py  category.py  conversation.py  file.py  file_version.py  message.py  person.py  stripe_webhook.py  subscription_tier.py  token_pricing.py  usage_log.py  user_subscription.py
app/models/: __init__.py  base.py  category.py  conversation.py  file.py  file_version.py  message.py  person.py  stripe_webhook.py  subscription_tier.py  token_pricing.py  usage_log.py  user_subscription.py
app/routers/: auth.py  billing.py  categories.py  chat.py  comparison.py  conversations.py  file_versions.py  files.py  ingestion.py  messages.py  orchestrator.py  (+5 more)
(+29 files in other folders)
